[package]
name = "rynamodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
tokio = { version = "1.25.0", features = ["full"] }

[dev-dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
insta = "1.28.0"
