[package]
name = "rynamodb-compliance-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
axum = "0.6.12"
serde_json = "1.0.102"
serde = { version = "1.0.159", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.27.0", features = ["full"] }
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24", features = ["serde"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clap = { version = "4.2.1", features = ["derive"] }
futures = "0.3.28"
