[package]
name = "rynamodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
tokio = { version = "1.27.0", features = ["full"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
eyre = "0.6.8"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt", "env-filter"] }
thiserror = "1.0.40"
pest = "2.5.5"
pest_derive = "2.5.5"
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde_dynamo = "4.1.0"
clap = { version = "4.1.11", features = ["derive"] }
reqwest = { version = "0.11.15", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.27.0"
insta = { version = "1.29.0", features = ["redactions", "filters", "json"] }
